ensure spacing consistency

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -389,6 +389,10 @@ details.build-toggle {
   flex-direction: column;
 }
 
+.hidden-spacer {
+  visibility: hidden;
+}
+
 .large-loader {
   display: flex;
   flex-direction: row;
